# LICO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  all_run.sh  bdq_lico++_greedy.sh  bdq_lico_greedy.sh  lico_build.cpp  lico_decode.cpp  lico_query.cpp  other_index.cpp
external_last/Vp2SetOperation/include/: vp2intersect.h  vp2union.hpp
include/: config.hpp  lico_build.hpp  lico_decode.hpp  lico_enumerate.hpp  lico_fastpfor.hpp  lico_kernel.hpp  lico_partition.hpp  lico_query.hpp  other_index.hpp  perf_event.hpp  tools.hpp
include/fitting-method/: greedy_pla.hpp  linear_spline.hpp  optimal_pla.hpp  swing_pla.hpp
include/sdsl-lite/lib/pkgconfig/: libdivsufsort.pc  libdivsufsort64.pc  sdsl-lite.pc
